<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/first_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/first_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/first_date" />

        <EditText
            android:id="@+id/first_date_input"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:inputType="date" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/second_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/second_date" />

        <EditText
            android:id="@+id/second_date_input"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/answer_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/answer_in_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_in" />

        <ToggleButton
            android:id="@+id/days_weeks_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_in"
            android:textOff="@string/days"
            android:textOn="@string/weeks" />
    </LinearLayout>

    <TextView
        android:id="@+id/between_dates_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/between_dates_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/submit" />

</LinearLayout>